# CitySimDemo

./: .gitattributes  .gitignore  CMakeLists.txt  README  citysim.kdev4  planning.txt
app/: CMakeLists.txt
app/include/: ForwardRenderer.h  ForwardRenderer_p.h  LocUtil.h  MainWindow.h  RoadData.h  RootEntity.h  ShpEntity.h  ShpMeshGeometryShapelib.h
app/include/aspect/: FpsMonitorAspect.h  FpsMonitorBackend.h  FpsMonitorComponent.h  UpdateFpsMonitorsJob.h
app/src/: ForwardRenderer.cpp  MainWindow.cpp  RoadData.cpp  RootEntity.cpp  ShpEntity.cpp  ShpMeshGeometryShapelib.cpp  ShpMeshRenderer.cpp  ShpRoadMapEntity.cpp  main.cpp
app/src/aspect/: FpsMonitor.cpp  FpsMonitorAspect.cpp  FpsMonitorBackend.cpp  FpsMonitorComponent.cpp  FpsMonitorMapper.cpp  MovingAverage.cpp  UpdateFpsMonitorsJob.cpp
app/ui/: citysim.ui
core/: BufferBuilder.h  CMakeLists.txt  GeometryBuilder.cpp  GeometryBuilder.h  Line.cpp  LineString.cpp  LogUtils.h  Plane3D.h
core/include/core/: BufferBuilder.h  Constants.h  GeometryBuilder.h  Line.h  LineString.h  LogUtilsQt.h  Ray3D.h
core/src/: BufferBuilder.cpp  GeometryBuilder.cpp  Line.cpp  LineString.cpp  LogUtils.cpp  LogUtilsQt.cpp  Plane3D.cpp  Ray3D.cpp
data/edmonton/roads/: geo_export_9838bedc-89ec-4df7-91d5-8b9936f52949.dbf
data/edmonton/rooflines/: 170033 Building Footprint_3TM.dbf  170033 Building Footprint_3TM.prj  170033 Building Footprint_3TM.shp  170033 Building Footprint_3TM.shx  geo_export_f085c325-d27a-490b-91e9-7bcccea17a63.dbf  geo_export_f085c325-d27a-490b-91e9-7bcccea17a63.shp  geo_export_f085c325-d27a-490b-91e9-7bcccea17a63.shx
edmonton-slsn/: geo_export_9838bedc-89ec-4df7-91d5-8b9936f52949.shp  geo_export_9838bedc-89ec-4df7-91d5-8b9936f52949.shx
geometryloader/: CMakeLists.txt  GdalLoader.h  GdalLoaderFactory.cpp  GdalLoaderFactory.h  GeometryLoaderFactory.cpp
geometryloader/include/: GeometryLoader.h  GeometryLoaderFactory.h
geometryloader/include/geometryloader/: GdalLoader.h  GdalLoaderFactory.h  GeometryLoaderFactory.h
geometryloader/src/: GdalLoader.cpp  GdalLoaderFactory.cpp  GeometryLoader.cpp  GeometryLoaderFactory.cpp
graph/: CMakeLists.txt
graph/include/graph/: GraphNode.h  TransportGraph.h  VertexProperties.h
graph/src/: EdgeProperties.cpp  GraphNode.cpp  TransportGraph.cpp  VertexProperties.cpp
quadtree/: CMakeLists.txt  QuadTree.cpp  QuadTreeNode.cpp  QuadTreeNodeEntityFactory.cpp  QuadTreeNodeEntityFactory.h  QuadTreeNodeGeometry.cpp  QuadTreeNodeGeometry.h  QuadTreeNodeGeometryGenerator.h
quadtree/include/quadtree/: QuadTree.h  QuadTreeNode.h  QuadTreeNodeEntity.h  QuadTreeNodeGeometryFactory.h  QuadTreeNodeGeometryRenderer.h  QuadTreeNodeItem.h  QuadTreeNodePointItem.h
quadtree/src/: QuadTree.cpp  QuadTreeNode.cpp  QuadTreeNodeEntity.cpp  QuadTreeNodeEntityFactory.cpp  QuadTreeNodeGeometry.cpp  QuadTreeNodeGeometryFactory.cpp  QuadTreeNodeGeometryGenerator.cpp  QuadTreeNodeGeometryRenderer.cpp  QuadTreeNodeItem.cpp  QuadTreeNodePointItem.cpp
quadtree/test/: CMakeLists.txt  TestItem.h  quadtree.cpp  quadtreenodepointitem.cpp
src/: BufferBuilder.cpp  BufferBuilder.h  Constants.h  GeometryBuilder.cpp  GeometryBuilder.h  LogUtils.cpp  LogUtils.h  MainWindow.cpp  MainWindow.h  RoadData.cpp  RoadData.h  RootEntity.cpp  ShpEntity.cpp  ShpEntity.h  ShpMeshGeometry.cpp  ShpMeshGeometry.h  ShpMeshRenderer.cpp  ShpMeshRenderer.h  ShpRoadMapEntity.h  citysim.cpp  citysim.h  main.cpp
src/aspect/: FpsMonitor.cpp  FpsMonitor.h  FpsMonitorAspect.cpp  FpsMonitorAspect.h  FpsMonitorBackend.cpp  FpsMonitorComponent.cpp  FpsMonitorComponent.h  FpsMonitorMapper.h  MovingAverage.h  UpdateFpsMonitorsJob.cpp
src/graph/: EdgeProperties.h  GraphNode.cpp  TransportGraph.cpp  TransportGraph.h  VertexProperties.cpp  VertexProperties.h
src/quadtree/: QuadTree.cpp  QuadTree.h  QuadTreeNode.cpp  QuadTreeNode.h  QuadTreeNodeEntity.cpp  QuadTreeNodeEntity.h  QuadTreeNodeEntityFactory.h  QuadTreeNodeGeometry.cpp  QuadTreeNodeGeometry.h  QuadTreeNodeGeometryFactory.cpp  QuadTreeNodeGeometryFactory.h  QuadTreeNodeGeometryGenerator.cpp  QuadTreeNodeGeometryGenerator.h  QuadTreeNodeGeometryRenderer.cpp  QuadTreeNodeGeometryRenderer.h  QuadTreeNodeItem.cpp  QuadTreeNodeItem.h
test/: CMakeLists.txt  quadtree.cpp
util/: CMakeLists.txt  Math.h  NullPointerException.cpp  Point.cpp  Preconditions.h  Rect.cpp  Size.h
util/include/: NullPointerException.h  Point.h  Rect.h
util/include/util/: LogUtils.h  Math.h  Plane3D.h  Point.h  Preconditions.h  Rect.h
util/src/: LogUtils.cpp  Plane3D.cpp  Point.cpp  Rect.cpp  Size.cpp
